Move stacks to the homelab repo

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ DISCOVERY_DEPTH=2
 
 # --- Git repo + paths ---
 # Use SSH or HTTPS… SSH recommended for a private repo
-REPO_URL=github.com/Dario-Maselli/homelab.git
+REPO_URL=https://github.com/Dario-Maselli/homelab.git
 BRANCH=main
 
 # Worktree mode… your dev checkout stays untouched
