--- a/watcher.yaml
+++ b/watcher.yaml
@@ -30,20 +30,16 @@ projects:
 
       - dir: authentication
         compose: docker-compose.yml
+        # If authentication (or any other stack) doesn’t need env… omit env entirely or keep optional: true
         env:
           backend: vault
           secret_path: kv/homelab/authentication
           data_key: env
           optional: true
+          materialize: ".env"
 
       - dir: core
         compose: docker-compose.yaml
-        # If core doesn’t need env… omit env entirely or keep optional: true
-        env:
-          backend: vault
-          secret_path: kv/homelab/core
-          data_key: env
-          optional: true
 
       - dir: databases
         compose: docker-compose.yml
@@ -52,6 +48,7 @@ projects:
           secret_path: kv/homelab/databases
           data_key: env
           optional: true
+          materialize: ".env"
 
       - dir: media
         compose: docker-compose.yaml
@@ -63,3 +60,4 @@ projects:
           secret_path: kv/homelab/monitoring
           data_key: env
           optional: true
+          materialize: ".env"
