auto docker down when removed from stack

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # --- Vault ---
 VAULT_ADDR=http://127.0.0.1:8200
 VAULT_TOKEN=<watcher-token-with-read-only-policy>
+VAULT_UNSEAL_TOKEN=<your-unseal-token>
+VAULT_WAIT_TIMEOUT=120
 
 # --- Discord notifications ---
 DISCORD_WEBHOOK=<your-discord-webhook-url>
